--- a/package.json
+++ b/package.json
@@ -61,12 +61,14 @@
     "npm-run-all": "^4.1.1",
     "polyserve": "^0.25.3",
     "rollup-plugin-babel": "^3.0.4",
+    "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-node-resolve": "^3.3.0",
     "webpack": "^3.9.0",
     "webpack-dev-server": "^2.4.3"
   },
   "dependencies": {
-    "@polymer/lit-element": "^0.3.0"
+    "@polymer/lit-element": "^0.3.0",
+    "babel-polyfill": "^6.26.0"
   },
   "publishConfig": {
     "access": "public"
